--- a/html/components/component_button.html
+++ b/html/components/component_button.html
@@ -134,9 +134,8 @@
 
 			<h2>CTA <span>FAB</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="fab fab-square view-more" aria-label="더보기"></button>
-				<button type="button" class="fab fab-circle view-more" aria-label="더보기"></button>
-				<button type="button" class="fab fab-square scroll-to-top" aria-label="최상단으로 이동"></button>
+				<button type="button" class="fab fab-primary fab-square" aria-label="더보기"><i class="ico-add"></i></button>
+				<button type="button" class="fab fab-secondary fab-circle" aria-label="최상단으로 이동"><i class="ico-gototop"></i></button>
 			</div>
 			<hr>
 		</div>
