--- a/html/components/component_tag.html
+++ b/html/components/component_tag.html
@@ -87,18 +87,21 @@
 			<div class="ui-guide-box">
 				<h2>Small <span>23</span></h2>
 				<div class="guide-column-list">
-					<div class="tags tags-small tags-lightBlue">레이블</div>
-					<div class="tags tags-small tags-lightGray">레이블</div>
-					<div class="tags tags-small tags-lightCyan">레이블</div>
-					<div class="tags tags-small tags-lightViolet">레이블</div>
-					<div class="tags tags-small tags-lightPurple">레이블</div>
-					<div class="tags tags-small tags-lightRed">레이블</div>
-					<div class="tags tags-small tags-lightYellow">레이블</div>
-					<div class="tags tags-small tags-lightPink">레이블</div>
-					<div class="tags tags-small tags-red-100">레이블</div>
-					<div class="tags tags-small tags-FFF4EB">레이블</div>
-					<div class="tags tags-small tags-green-50">레이블</div>
-					<div class="tags tags-small tags-disabled_bg">레이블</div>
+					<div class="tags tags-small tags-lightBlue">tags-lightBlue</div>
+					<div class="tags tags-small tags-lightGray">tags-lightGray</div>
+					<div class="tags tags-small tags-lightCyan">tags-lightCyan</div>
+					<div class="tags tags-small tags-lightViolet">tags-lightViolet</div>
+					<div class="tags tags-small tags-lightPurple">tags-lightPurple</div>
+					<div class="tags tags-small tags-lightRed">tags-lightRed</div>
+					<div class="tags tags-small tags-lightYellow">tags-lightYellow</div>
+					<div class="tags tags-small tags-lightPink">tags-lightPink</div>
+					<div class="tags tags-small tags-red-100">tags-red-100</div>
+					<div class="tags tags-small tags-FFF4EB">tags-FFF4EB</div>
+					<div class="tags tags-small tags-green-50">tags-green-50</div>
+					<div class="tags tags-small tags-disabled_bg">tags-disabled_bg</div>
+					<div class="tags tags-small tags-deepGray">tags-deepGray</div>
+					<div class="tags tags-small tags-gray">tags-gray</div>
+
 				</div>
 			</div>
 			<hr>
