--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -334,6 +334,20 @@
 					<i class="icon-only icon-12 icon-caution bg-icon-gray_1"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-close</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-36 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-32 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-28 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-24 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-20 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-14 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-12 icon-close bg-icon-default"></i>
+				</div>
+			</div>
 
 		</div>
 	</div>
