--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -363,55 +363,60 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 #toast-container>div:hover {box-shadow:none;}
 
 
-/* jquery-datepicker */
-.jquery-datepicker .ui-widget.ui-widget-content {border:0;background-color:var(--white-100);color:var(--typography-black);border-radius:0;font-family:inherit;font-size:inherit;width:auto;padding:16px 0 0;height:425px;}
-.jquery-datepicker .ui-datepicker .ui-datepicker-header {padding:0;border-radius:0;border:0;background-color:var(--white-100);font-size:26px;font-weight:500;color:var(--typography-black);}
-.jquery-datepicker .ui-datepicker .ui-datepicker-prev,
-.jquery-datepicker .ui-datepicker .ui-datepicker-next {top:0;width:52px;height:52px;background-color:var(--surface-surface50);border-radius:50%;display:flex;align-items:center;justify-content:center;}
-.jquery-datepicker .ui-datepicker .ui-datepicker-prev:active,
-.jquery-datepicker .ui-datepicker .ui-datepicker-next:active {background-color:var(--surface-surface200);}
-.jquery-datepicker .ui-datepicker .ui-icon {position:static;}
-.jquery-datepicker .ui-icon-circle-triangle-w {background:url(../images/arrow/arrow_date_prev.svg) center center / 12px 24px no-repeat;}
-.jquery-datepicker .ui-icon-circle-triangle-e {background:url(../images/arrow/arrow_date_next.svg) center center / 12px 24px no-repeat;}
+/* datepicker-wrap */
+.datepicker-wrap .ui-widget.ui-widget-content {border:0;background-color:var(--white-100);color:var(--typography-black);border-radius:0;font-family:inherit;font-size:inherit;width:auto;padding:16px 0 0;height:425px;}
+.datepicker-wrap .ui-datepicker .ui-datepicker-header {padding:0;border-radius:0;border:0;background-color:var(--white-100);font-size:26px;font-weight:500;color:var(--typography-black);}
+.datepicker-wrap .ui-datepicker .ui-datepicker-prev,
+.datepicker-wrap .ui-datepicker .ui-datepicker-next {top:0;width:52px;height:52px;background-color:var(--surface-surface50);border-radius:50%;display:flex;align-items:center;justify-content:center;}
+.datepicker-wrap .ui-datepicker .ui-datepicker-prev:active,
+.datepicker-wrap .ui-datepicker .ui-datepicker-next:active {background-color:var(--surface-surface200);}
+.datepicker-wrap .ui-datepicker .ui-icon {position:static;}
+.datepicker-wrap .ui-icon-circle-triangle-w {background:url(../images/arrow/arrow_date_prev.svg) center center / 12px 24px no-repeat;}
+.datepicker-wrap .ui-icon-circle-triangle-e {background:url(../images/arrow/arrow_date_next.svg) center center / 12px 24px no-repeat;}
 
 
-.jquery-datepicker .ui-widget-content .ui-state-hover, 
-.jquery-datepicker .ui-widget-header .ui-state-hover, 
-.jquery-datepicker .ui-widget-content .ui-state-focus, 
-.jquery-datepicker .ui-widget-header .ui-state-focus {border:0;background-color:var(--surface-surface200);}
-.jquery-datepicker .ui-datepicker .ui-datepicker-next,
-.jquery-datepicker .ui-datepicker .ui-datepicker-next-hover {right:0;}
-.jquery-datepicker .ui-datepicker .ui-datepicker-prev,
-.jquery-datepicker .ui-datepicker .ui-datepicker-prev-hover {left:0;}
-.jquery-datepicker .ui-datepicker .ui-datepicker-prev span, 
-.jquery-datepicker .ui-datepicker .ui-datepicker-next span {margin:0;}
+.datepicker-wrap .ui-widget-content .ui-state-hover, 
+.datepicker-wrap .ui-widget-header .ui-state-hover, 
+.datepicker-wrap .ui-widget-content .ui-state-focus, 
+.datepicker-wrap .ui-widget-header .ui-state-focus {border:0;background-color:var(--surface-surface200);}
+.datepicker-wrap .ui-datepicker .ui-datepicker-next,
+.datepicker-wrap .ui-datepicker .ui-datepicker-next-hover {right:0;}
+.datepicker-wrap .ui-datepicker .ui-datepicker-prev,
+.datepicker-wrap .ui-datepicker .ui-datepicker-prev-hover {left:0;}
+.datepicker-wrap .ui-datepicker .ui-datepicker-prev span, 
+.datepicker-wrap .ui-datepicker .ui-datepicker-next span {margin:0;}
 
-.jquery-datepicker .ui-datepicker .ui-datepicker-title {margin:0 52px;line-height:52px;}
+.datepicker-wrap .ui-datepicker .ui-datepicker-title {margin:0 52px;line-height:52px;}
 
-.jquery-datepicker .ui-datepicker table {table-layout:fixed;margin:0 auto;font-size:inherit;border-collapse:separate;}
+.datepicker-wrap .ui-datepicker table {table-layout:fixed;margin:0 auto;font-size:inherit;border-collapse:separate;}
 
-.jquery-datepicker .ui-datepicker-calendar thead th {color:var(--gray-400);}
-.jquery-datepicker .ui-datepicker-calendar tbody td {color:var(--typography-black);}
-.jquery-datepicker .ui-datepicker-calendar thead th,
-.jquery-datepicker .ui-datepicker-calendar tbody td {font-size:16px;font-weight:500;line-height:40px;border:4px solid transparent;text-align:center;padding:0;}
-.jquery-datepicker .ui-datepicker-calendar tbody tr:not(:last-child) > * {}
-.jquery-datepicker .ui-datepicker-calendar td.ui-datepicker-other-month {}
-.jquery-datepicker .ui-datepicker-calendar td.ui-datepicker-other-month span,
-.jquery-datepicker .ui-datepicker-calendar td.ui-datepicker-other-month a {color:var(--gray-400);}
-.jquery-datepicker .ui-datepicker td span,
-.jquery-datepicker .ui-datepicker td a {padding:0;text-align:center;border:0;background:none;font-weight:inherit;color:inherit;width:40px;height:100%;border-radius:8px;margin:0 auto;}
+.datepicker-wrap .ui-datepicker-calendar thead th {color:var(--gray-400);}
+.datepicker-wrap .ui-datepicker-calendar tbody td {color:var(--typography-black);}
+.datepicker-wrap .ui-datepicker-calendar thead th,
+.datepicker-wrap .ui-datepicker-calendar tbody td {font-size:16px;font-weight:500;line-height:40px;border:4px solid transparent;text-align:center;padding:0;}
+.datepicker-wrap .ui-datepicker-calendar tbody tr:not(:last-child) > * {}
+.datepicker-wrap .ui-datepicker-calendar td.ui-datepicker-other-month {}
+.datepicker-wrap .ui-datepicker-calendar td.ui-datepicker-other-month span,
+.datepicker-wrap .ui-datepicker-calendar td.ui-datepicker-other-month a {color:var(--gray-400);}
+.datepicker-wrap .ui-datepicker td span,
+.datepicker-wrap .ui-datepicker td a {position:relative;padding:0;text-align:center;border:0;background:none;font-weight:inherit;color:inherit;width:40px;height:100%;border-radius:8px;margin:0 auto;}
 
-.jquery-datepicker .ui-state-active,
-.jquery-datepicker .ui-widget-content .ui-state-active,
-.jquery-datepicker .ui-widget-header .ui-state-active,
-.jquery-datepicker a.ui-button:active,
-.jquery-datepicker .ui-button:active, .ui-button.ui-state-active:hover {background-color:var(--brandPrimary-blue600);color:var(--typography-white);}
+.datepicker-wrap .ui-state-active,
+.datepicker-wrap .ui-widget-content .ui-state-active,
+.datepicker-wrap .ui-widget-header .ui-state-active,
+.datepicker-wrap a.ui-button:active,
+.datepicker-wrap .ui-button:active, .ui-button.ui-state-active:hover {background-color:var(--brandPrimary-blue600);color:var(--typography-white);}
 
-.jquery-datepicker .ui-state-disabled,
-.jquery-datepicker .ui-widget-content .ui-state-disabled,
-.jquery-datepicker .ui-widget-header .ui-state-disabled {opacity:1;}
+.datepicker-wrap .ui-state-disabled,
+.datepicker-wrap .ui-widget-content .ui-state-disabled,
+.datepicker-wrap .ui-widget-header .ui-state-disabled {opacity:1;}
 
-.jquery-datepicker .ui-datepicker .ui-datepicker-buttonpane {display:flex;margin:0;}
+.datepicker-wrap .ui-datepicker .ui-datepicker-buttonpane {display:flex;margin:0;}
 
-.jquery-datepicker tbody .ui-datepicker-week-end:first-child {color:var(--red-400);}
-.jquery-datepicker tbody .ui-datepicker-week-end:last-child {color:var(--blue-400);}
+.datepicker-wrap tbody .ui-datepicker-week-end:first-child {color:var(--red-400);}
+.datepicker-wrap tbody .ui-datepicker-week-end:last-child {color:var(--blue-400);}
+.schedule-wrap {position:absolute;left:0;bottom:1px;width:100%;height:6px;display:flex;align-items:center;justify-content:center;gap:2px;}
+.schedule-wrap .sc-label {flex:0 0 6px;width:6px;height:6px;border-radius:50%;}
+.sc-label.label01 {background-color:var(--red-500);}
+.sc-label.label02 {background-color:var(--cyan-500);}
+.sc-label.label03 {background-color:var(--purple-500);}
